Fix spacing issue in cart dropdown

--- a/source/styles/components/header.css
+++ b/source/styles/components/header.css
@@ -285,6 +285,7 @@ header {
 
     & .header-cart-actions {
       text-align: center;
+      margin-top: 10px;
 
       & a {
         display: block;
